Add classic types

--- a/itc/programmation/variables.ipynb
+++ b/itc/programmation/variables.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "# Variables\n",
     "\n",
+    "## Définition\n",
     "Une variable en informatique possède 3 caractéristiques :\n",
     "- un nom\n",
     "- une valeur\n",
@@ -92,7 +93,21 @@
    "source": [
     "```{note}\n",
     "Même si la définition d'une variable et la modification d'une variable s'écrivent de la même façon en Python (`a = ...`), il s'agit de deux instructions fondamentalement différentes.   \n",
-    "```"
+    "```\n",
+    "\n",
+    "## Types classiques"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "| Type Python | Description | Exemple |\n",
+    "| --- | --- | --- |\n",
+    "| int | entier | 0, 42, -7 |\n",
+    "| bool | booléen (vrai ou faux) | True, False |\n",
+    "| str | chaîne de caractères | \"blabla\", \"\", \"info\" |\n",
+    "| float | nombre à virgule | 3.14, -2.718 |"
    ],
    "cell_type": "markdown",
    "metadata": {}
