--- a/1_Python/1_fonctions.ipynb
+++ b/1_Python/1_fonctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be80c51a",
+   "id": "31e1aa44",
    "metadata": {},
    "source": [
     "# Définition de fonction\n",
@@ -13,13 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e0c638e",
+   "id": "1319082b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.125464Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.123978Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.129705Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.128464Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.156223Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.155821Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.157683Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.157280Z"
     }
    },
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988c5821",
+   "id": "b9f900eb",
    "metadata": {},
    "source": [
     "- `f` est le **nom** de la fonction\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ede2e7",
+   "id": "89d3e3bb",
    "metadata": {},
    "source": [
     "On utilise une fonction en écrivant son nom suivi d'une valeur pour ses arguments (on dit qu'on **appelle** `f`) :"
@@ -51,13 +51,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9ee9949",
+   "id": "4baaad07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.150314Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.145031Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.159075Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.157774Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.163947Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.163552Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.165781Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.165475Z"
     }
    },
    "outputs": [
@@ -67,7 +67,7 @@
        "6"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ee41a5",
+   "id": "eb8b0ded",
    "metadata": {},
    "source": [
     "La variable `x` dans `f` est **locale** : elle n'existe que dans `f` et ne peut pas être utilisée/modifiée en dehors. Par exemple :"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b4a7d7f4",
+   "id": "726d4ddd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.170757Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.169478Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.218890Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.218549Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.168343Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.168012Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.196298Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.195986Z"
     }
    },
    "outputs": [
@@ -104,7 +104,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-eb071cb97589>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# x n'existe qu'à l'intérieur de f, il ne faut pas essayer de l'utiliser en dehors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-eb071cb97589>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# x n'existe qu'à l'intérieur de f, il ne faut pas essayer de l'utiliser en dehors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c9d1d6",
+   "id": "dbea5a4f",
    "metadata": {},
    "source": [
     "La variable `x` dans `f` est **muette** : de la même façon que la fonction mathématiques $f : x \\longmapsto 2x$ est équivalente à $f : y \\longmapsto 2y$, la fonction `f` ci-dessous est parfaitement équivalente à :"
@@ -127,13 +127,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83626b32",
+   "id": "fde12cb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.221148Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.220832Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.222607Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.222237Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.198655Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.198332Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.200249Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.199955Z"
     }
    },
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d80d31ee",
+   "id": "aea9592d",
    "metadata": {},
    "source": [
     "**Exercice 1**\n",
@@ -156,13 +156,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85c5d4f0",
+   "id": "ab7d3bf6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.225676Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.225358Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.227872Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.227544Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.203341Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.202912Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.205515Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.205238Z"
     }
    },
    "outputs": [
@@ -179,7 +179,7 @@
        "42.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c62402e9",
+   "id": "e28573e4",
    "metadata": {},
    "source": [
     "**Exercice 2**\n",
@@ -211,13 +211,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "303ee781",
+   "id": "5e99467b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.230665Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.230304Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.232484Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.232190Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.208248Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.207895Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.210338Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.210008Z"
     }
    },
    "outputs": [
@@ -227,7 +227,7 @@
        "0.2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8c4aff",
+   "id": "0ade5b4b",
    "metadata": {},
    "source": [
     "# Pourquoi écrire des fonctions?\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d80e649",
+   "id": "9c3183fa",
    "metadata": {},
    "source": [
     "# Fonctions de plusieurs variables\n",
@@ -268,13 +268,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "36e0f5d8",
+   "id": "a67552ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.234671Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.234307Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.236066Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.235735Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.212619Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.212300Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.214131Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.213804Z"
     }
    },
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56b17e9",
+   "id": "85f1441d",
    "metadata": {},
    "source": [
     "On utilise la fonction `somme` en donnant deux valeurs pour `x` et `y` (dans l'ordre), séparées par une virgule :"
@@ -294,13 +294,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "370dd480",
+   "id": "09fff33e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.238469Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.238114Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.240416Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.240067Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.216491Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.216123Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.218507Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.218183Z"
     }
    },
    "outputs": [
@@ -310,7 +310,7 @@
        "7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5788c6d6",
+   "id": "e1562e17",
    "metadata": {},
    "source": [
     "On peut bien sûr utiliser plus de variables : "
@@ -330,13 +330,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8f3fbcd5",
+   "id": "c8bdaee6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.243093Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.242740Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.244735Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.244472Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.221027Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.220676Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.223001Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.222677Z"
     }
    },
    "outputs": [
@@ -346,7 +346,7 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,22 +359,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87dac2b0",
+   "id": "8f89a935",
    "metadata": {},
    "source": [
-    "**Exercice** : Définir une fonction `delta` telle que `delta(a, b, c)` renvoie le discriminant de l'équation $ax^2 + bx + c$. Vérifier que le discriminant de $x^2 + 2x + 3$ est $-8$."
+    "**Exercice** : Définir une fonction `delta` telle que `delta(a, b, c)` renvoie le discriminant de l'équation $ax^2 + bx + c = 0$. Vérifier que le discriminant de $x^2 + 2x + 3$ est $-8$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a34363d1",
+   "id": "b2df729c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.247467Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.247113Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.249104Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.249353Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.225504Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.225154Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.227475Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.227141Z"
     }
    },
    "outputs": [
@@ -384,7 +384,7 @@
        "-8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d656d90a",
+   "id": "1f39f9b9",
    "metadata": {},
    "source": [
     "# Fonctions prédéfinies\n",
@@ -407,13 +407,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "22d0c5ca",
+   "id": "5819716d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.251789Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.251465Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.349539Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.350167Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.229937Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.229598Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.315215Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.315838Z"
     }
    },
    "outputs": [
@@ -423,7 +423,7 @@
        "2.718281828459045"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,13 +437,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09b8efa9",
+   "id": "0cd2cb65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.353928Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.352733Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.360593Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.361425Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.318761Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.318120Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.322697Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.323355Z"
     }
    },
    "outputs": [
@@ -453,7 +453,7 @@
        "0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e676e2",
+   "id": "4e6620e4",
    "metadata": {},
    "source": [
     "**Exercice** Définir la fonction sigmoïde $s : x \\longmapsto \\frac{1}{1+e^{-x}}$. En calculant $s(x)$ pour de grandes valeurs de $x$, conjecturer son comportement en $+\\infty$."
@@ -473,13 +473,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "857a01b6",
+   "id": "6f019afc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-09T17:03:02.365328Z",
-     "iopub.status.busy": "2021-08-09T17:03:02.364172Z",
-     "iopub.status.idle": "2021-08-09T17:03:02.372834Z",
-     "shell.execute_reply": "2021-08-09T17:03:02.373665Z"
+     "iopub.execute_input": "2021-08-15T14:27:35.326223Z",
+     "iopub.status.busy": "2021-08-15T14:27:35.325554Z",
+     "iopub.status.idle": "2021-08-15T14:27:35.330452Z",
+     "shell.execute_reply": "2021-08-15T14:27:35.331078Z"
     }
    },
    "outputs": [
@@ -489,7 +489,7 @@
        "0.9999546021312976"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e4604f3",
+   "id": "95442339",
    "metadata": {},
    "source": [
     "Si on veut gagner du temps ou si on ne se souvient pas du nom de la fonction que l'on souhaite utiliser, on peut utiliser la touche Tab pour compléter automatiquement ce qu'on est en train d'écrire. On peut ensuite sélectionner la bonne fonction avec la touche Entrée :\n",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063f4927",
+   "id": "7a5383bf",
    "metadata": {},
    "source": [
     "Il est possible d'obtenir de l'aide sur une fonction en cliquant dessus puis en appuyant sur les touches Shift+Tab (laisser appuyer sur Shift, puis appuyer sur Tab) :\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43e13b9c",
+   "id": "f5629f4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -545,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
