--- a/1_Python/0_variables.ipynb
+++ b/1_Python/0_variables.ipynb
@@ -25,10 +25,10 @@
    "id": "0e3897bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.557341Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.554927Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.562770Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.564144Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.192673Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.192258Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.194159Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.193775Z"
     },
     "id": "46f4dfa5"
    },
@@ -56,10 +56,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.586851Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.586067Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.591067Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.590426Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.200702Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.200263Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.202839Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.202350Z"
     },
     "id": "e61f2cb6",
     "outputId": "2a0c27e2-cc3e-49c4-dfca-dee8bacc03eb"
@@ -97,10 +97,10 @@
    "id": "2ca2763e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.595576Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.595019Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.598237Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.597791Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.205783Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.205303Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.207618Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.207251Z"
     },
     "id": "9cfc31ae"
    },
@@ -146,10 +146,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.601850Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.601397Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.604091Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.603626Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.210229Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.209899Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.211757Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.212015Z"
     },
     "id": "08972b4c",
     "outputId": "e7a9d247-843b-40e7-df78-a1a8b9a47920"
@@ -184,10 +184,10 @@
    "id": "e96e346e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.607408Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.606821Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.609205Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.608731Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.214348Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.214029Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.215512Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.215828Z"
     }
    },
    "outputs": [],
@@ -237,10 +237,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.612483Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.612031Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.614597Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.614142Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.218249Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.217903Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.220016Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.220329Z"
     },
     "id": "83f7142e",
     "outputId": "16a56c2b-7928-44d3-83fd-c68c81e121d6"
@@ -278,8 +278,15 @@
     "| `*` | multiplication | `2*3` vaut `6` |\n",
     "| `**` | puissance | `2**3` vaut `8` |\n",
     "| `/` | division (dans $\\mathbb{Q}$) | `5/2` vaut `2.5` |\n",
-    "| `//` | division **entière** (dans $\\mathbb{N}$) | `5//2` vaut `2`  |\n",
-    "\n",
+    "| `//` | division **entière** (**quotient** de la division euclidienne) | `5//2` vaut `2`  |\n",
+    "| `%` | modulo (**reste** de la division euclidienne) | `5%2` vaut `1`  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc1a94c3-9e65-48d2-911d-0992b9112261",
+   "metadata": {},
+   "source": [
     "Une racine peut être calculée avec `**`. Par exemple, $\\sqrt{2} = 2^{\\frac{1}{2}}$ :"
    ]
   },
@@ -289,10 +296,10 @@
    "id": "694812f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.617817Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.617368Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.620239Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.619775Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.222773Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.222439Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.224410Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.224686Z"
     },
     "id": "ea5988f9"
    },
@@ -324,6 +331,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "291b3a3d-a5a7-4bda-b444-c03a5f4ad98f",
+   "metadata": {},
+   "source": [
+    "On rappelle que la [division euclidienne](https://fr.wikipedia.org/wiki/Division_euclidienne) de $a$ par $b$ consiste à décomposer $a = bq + r$ avec $q$ le quotient (obtenu par `a // b` en Python) et $r$ le reste (obtenu par `a % b`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c918175-b0e4-4a6a-9327-be830dc3dbaf",
+   "metadata": {},
+   "source": [
+    "**Exercice** : Calculer le quotient $q$ et le reste $r$ de la division euclidienne de 573 par 18. Vérifier que $573 = 18\\times q + r$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d9ba4bc-d659-46b1-864b-f31681432247",
+   "metadata": {},
+   "source": [
+    "`%` permet aussi de tester la divisibilité : \n",
+    "$$b \\text{ divise } a$$\n",
+    "$$\\Longleftrightarrow \\exists d, a = b\\times d$$\n",
+    "$$\\Longleftrightarrow \\exists d, a = b\\times d + 0$$\n",
+    "$$\\Longleftrightarrow \\text{le reste de la division de } a \\text{ par } b \\text{ est } 0$$\n",
+    "$$\\Longleftrightarrow a \\% b == 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f467c059-840d-41b8-a1c7-15a13695120d",
+   "metadata": {},
+   "source": [
+    "**Exercice** : Est-ce que $86082823925$ est divisible par $179723$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1fb13beb",
    "metadata": {
     "id": "e02ddf3b"
@@ -351,10 +395,10 @@
    "id": "b9d6400f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.623415Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.622943Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.625691Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.625230Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.227294Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.226943Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.229139Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.228851Z"
     }
    },
    "outputs": [
@@ -402,10 +446,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.629045Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.628598Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.631483Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.631019Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.231398Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.231065Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.232960Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.233227Z"
     },
     "id": "6LErgmRFyzUj",
     "outputId": "41852847-7763-4017-ad3b-d05087392eda"
@@ -432,10 +476,10 @@
    "id": "545bdf45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.634450Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.634008Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.636926Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.636473Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.235563Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.235136Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.237137Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.237405Z"
     },
     "id": "2ydfxnw4y7Ef"
    },
@@ -511,10 +555,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.640154Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.639697Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.642590Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.642134Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.239899Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.239507Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.241451Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.241720Z"
     },
     "id": "59a96c3b",
     "outputId": "eba4af7a-8bec-4510-b698-599392c7ff2a",
@@ -568,10 +612,10 @@
      "height": 212
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.646033Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.645576Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.677665Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.677297Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.244166Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.243833Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.273248Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.272956Z"
     },
     "id": "d1f0463f",
     "outputId": "3ba6fb3d-fe13-448c-8778-7c3d7a74fd10",
@@ -624,10 +668,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.680241Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.679873Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.681732Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.682000Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.275682Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.275347Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.277308Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.277560Z"
     },
     "id": "cfd2bd1b",
     "outputId": "dff1b3c4-d5f3-4b32-8928-dd05e45d675a"
@@ -668,10 +712,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.684380Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.684026Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.685851Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.685575Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.279910Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.279535Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.281287Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.281539Z"
     },
     "id": "1fdcbfc5",
     "outputId": "b1337f9f-415b-4536-a190-e4ac98a799ce"
@@ -713,10 +757,10 @@
      "height": 246
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.688365Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.688030Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.692360Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.692021Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.285330Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.283847Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.287736Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.288033Z"
     },
     "id": "795daef3",
     "outputId": "68d2ddc3-0940-41fe-aa5b-97f7d0126222",
@@ -775,10 +819,10 @@
      "height": 246
     },
     "execution": {
-     "iopub.execute_input": "2021-08-15T14:27:32.696300Z",
-     "iopub.status.busy": "2021-08-15T14:27:32.695966Z",
-     "iopub.status.idle": "2021-08-15T14:27:32.698532Z",
-     "shell.execute_reply": "2021-08-15T14:27:32.698197Z"
+     "iopub.execute_input": "2021-08-15T19:57:09.291657Z",
+     "iopub.status.busy": "2021-08-15T19:57:09.291003Z",
+     "iopub.status.idle": "2021-08-15T19:57:09.294092Z",
+     "shell.execute_reply": "2021-08-15T19:57:09.294374Z"
     },
     "id": "54bf420a",
     "outputId": "9db04783-c3d3-428c-e6dc-bef5fd4ddb4c",
